--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-
 	<name>gab_photography</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -55,7 +54,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.0.0.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
